# lab1

./: .gitignore  pyproject.toml  requirements.txt  romania_path.py  test.py
