[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab1"
version = "0.1.0"
description = "Лабораторная работа №1"
readme = "README.md"
authors = [
    {name = "ilya", email = "example@mail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1"
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "F541"]
exclude = [".venv", "build", "dist"]